--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="icon-box">
               <div class="icon">
-			  <img src="assets\img\icon\rest-api.png" alt="Api icon" width="50" height="60" style="position:absolute; left:12px;">
+			  <img src="assets\img\icon\dot_net.png" alt="Api icon" width="50" height="60" style="position:absolute; left:12px;">
 			  
 			  </div>
               <h4 class="title"><a href="">Rest Api</a></h4>
